GNOME Bugzilla – Bug 601640
soup_multipart_new_from_message() doesn't work properly with binary message body
Last modified: 2009-11-21 15:30:50 UTC
Created attachment 147535 [details] Source code to help with error representation Hi, I'm using LibSoup as HTTP-server for web access to my application. I need to POST files to this server by multipart/form-data - encoded FORM. In handler of this POST request I'm using function soup_multipart_new_from_message() to get access to each part of body. When I'm posting a text file all is OK. But if I'm posting binary file (picture, executable file..) soup_multipart_new_from_message() returns NULL. I've attached small HTTP-server which could help to represent this error. Just connect to this server from web-browser and try to submit text and binary files. Thanks
oops, looks like we use strstr() to find the multipart boundary string, so it will fail if there's a '\0' byte
fixed in git. will be in libsoup 2.28.2 in a few weeks. thanks for the bug report.