soup_multipart_new_from_message: fix to work with binary attachments

Previously we were using strstr() to find the multipart boundary, so
it would fail if the body contained '\0' bytes. Update
tests/forms-test to test this case.

https://bugzilla.gnome.org/show_bug.cgi?id=601640